# dewarp

./: README.md  pyproject.toml
src/dewarp/: __init__.py
src/dewarp/cli/: main.py
src/dewarp/core/: __init__.py  pipeline.py
src/dewarp/models/: __init__.py  base.py  scanner.py  segmentation.py
tests/: __init__.py  conftest.py  test_cli.py  test_models.py  test_pipeline.py
